2006-11-21  Kohei Yoshida  <kohei.yoshida@gmail.com>

	* source/ui/dialog.hxx
	* source/inc/dialog.cxx (updateWidgets): added.

	* source/inc/global.hxx: added SCSOLVER_DEBUG define and removed unused
	global functions.

	* source/ui/lpbuilder.hxx
	* source/inc/lpbuilder.cxx: made constraint parsing more flexible so that
	even when the LHS value is a value instead of a cell reference it would
	parse correctly.

	* source/numeric/lpsolve.cxx: cleaned up debug output calls.  iostream
	seems broken when used with stlports.

	* source/service/service.cxx: cleaned up debug output calls.

	* source/ui/basedlg.cxx: extra check for NULL-ness.
	
	* source/ui/global.cxx: replaced dysfunctional cout calls with printf
	calls.

	* source/ui/listener.cxx: fixed a weird behavior when the user cancels the
	range selection mode.  also fixed one crasher bug when the Change or
	Delete button is pressed when nothing in the constraint list box is 
	highlighted.

	* source/ui/solvemodel.cxx: fixed constraint parsing error when constant
	term is present in either side of the constraint formula.

2006-11-11  Kohei Yoshida  <kohei.yoshida@gmail.com>

	* source/*/basedlg.?xx:
	* source/*/dialog.?xx:
	* source/*/msgdlg.?xx:
	* source/*/optiondlg.?xx: added pure virtual function close() to
	BaseDialog and their implementations in the derived classes.

	* source/ui/listener.cxx (CloseBtnListener): switched to using
	close() instead of setVisible(false) for closing action.

2006-11-09  Kohei Yoshida  <kohei.yoshida@gmail.com>

	* source/*/baselistener.?xx: TopWindowListener and 
	SimpleActionObject classes added.

	* source/*/dialog.?xx: added listener to handle window closing
	event to the main and constraint dialogs in order to handle 
	closing by clicking the close button in the title bar or hitting
	the escape key.

	* source/*/optiondlg.?xx: added listener to handle window closing
	event.  Refactored code to hide private member variables.
