@@ -1,5 +1,12 @@
 2006-11-21  Kohei Yoshida  <kohei.yoshida@gmail.com>
 
+	* source/ui/listener.cxx (ConstEditBtnListener::actionPerformed): show the
+	constraint dialog before populating it with initial values, because the 
+	combo box seems to forget the value when its initial value is given before
+	the dialog is realized.
+
+2006-11-21  Kohei Yoshida  <kohei.yoshida@gmail.com>
+
 	* source/ui/dialog.hxx
 	* source/inc/dialog.cxx (updateWidgets): added.
 
